--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
       <tr>
         <th>Title</th>
         <th>Description</th>
-        <th>Actions</th>
+        <th colspan=3>Actions</th>
       </tr>
     </thead>
 
@@ -17,11 +17,13 @@
           <td><%= article.description %></td>
           <td><%= link_to 'Show', article_path(article) %></td>
           <td><%= link_to 'Edit', edit_article_path(article)%></td>
-          <td><%= button_to 'Delete', article_path(article), method: :delete %></td>
+          <td><%= button_to 'Delete', article_path(article), method: :delete, 
+                                        form: { data: {turbo_confirm: "Are you sure?"}}%></td>
         </tr>
       <% end %>
     </tbody>
   </table>
+  <p><%= link_to 'Create new article', new_article_path %></p>
 <% else %>
   <p>Não existem artigos</p>
 <% end %>
