--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 <p><strong>Title:</strong><%= @article.title %></p>
 <p><strong>Description:</strong><%= @article.description %></p>
+
+<%= button_to 'Delete', article_path(@article), method: :delete, form: { data: {turbo_confirm: "Are you sure?"}} %> 
+<%= link_to 'Edit', edit_article_path(@article) %> | 
+<%= link_to 'Return to articles list', articles_path %>
