Install and Config Bootstrap 5

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
-<h1>A-Blog</h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <%# <div class="mt-4 p-5 bg-primary text-white rounded text-center"> %>
+    <div class="jumbo rounded text-center text-bold">
+      <h1 class="display-4">A Blog</h1>
+      <p>This is a simple JumboTron Style ....Lorem ipsum...</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and space content out whithin the larger container</p>
+      <a class="btn btn-sucess btn-lg" href="#" role="button">Sign up!</a>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Articles listing', articles_path %> |
-<%= link_to 'About', about_path %>
+
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+  <div class="container text-center">
+    <small>Copyright &copy; Your Website</small>
+  </div>
+</footer>
