--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,33 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevent the article from being saved</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container">
+  <% if @article.errors.any? %>
+    <h2>The following errors prevent the article from being saved</h2>
+    <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
-<%= form_with(model: @article, data: { turbo: false }) do |form| %>
-  <p>
-    <%= form.label :title %> <br>
-    <%= form.text_field :title %>
-  </p>
-  <p>
-    <%= form.label :description %> <br>
-    <%= form.text_area :description %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= form_with(model: @article, data: { turbo: false }, class: "shadow p-3 mb-3 bg-info rounded") do |form| %>
+        <div class="row mb-3">
+          <%= form.label :title, class: "col-2 col-form-label text-light" %> 
+          <div class="col-10">
+            <%= form.text_field :title, class: "form-control shadow rounded", placeholder: "Article's title" %>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <%= form.label :description, class: "col-2 col-form-label text-light" %> 
+          <div class="col-10">
+            <%= form.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description"  %>
+          </div>
+        </div>
+        <div class="col-auto">
+            <%= form.submit class: "btn btn-outline-light btn-lg text-smokewhite" %>
+        </div>
+      <% end %>
+          <%= link_to '[ Cancel and Return to articles list ]', articles_path, class: "text-info" %>
+    </div>
+  </div>
+</div>
