--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,7 @@
 
   <body class="d-flex flex-column">
     <%= render 'shared/navbar' %>
-    <div>
-      <%= notice %>
-      <%= alert %>
-    </div>
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </body>
 </html>
