--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,25 @@
-<h1>Showing article <%= @article.id %> details</h1>
 
-<p><strong>Title:</strong><%= @article.title %></p>
-<p><strong>Description:</strong><%= @article.description %></p>
+<div id="page-content">
+  <h2 class="text-center mt-4"><%= @article.title %></h2>
 
-<div class="card-body">
-  <%= link_to 'Delete', article_path(@article), data: { "turbo-method": :delete }, class: "btn btn-outline-danger" %>
-  <%= link_to 'Edit', edit_article_path(@article) %> | 
-  <%= link_to 'Return to articles list', articles_path %>
+  <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-2 bg-white rounded">
+            <div class="card-header fst-italic fw-lighter">
+              by <%= @article.user.username %>
+            </div>
+            <div class="card-body">
+              <div class="card-text text-start "><%= simple_format(@article.description) %></div>
+              <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+              <%= link_to "Delete", article_path(@article), data: { "turbo-method": :delete }, class: "btn btn-outline-danger" %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Created <%= time_ago_in_words(@article.created_at) %>, 
+                     edited  <%= time_ago_in_words(@article.updated_at) %> ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 </div>
