Add users create action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       <p>This is a simple JumboTron Style ....Lorem ipsum...</p>
       <hr class="my-4">
       <p>It uses utility classes for typography and space content out whithin the larger container</p>
-      <a class="btn btn-sucess btn-lg" href="#" role="button">Sign up!</a>
+      <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
     </div>
   </div>
 </div>
