--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors' %>
+      <%= render 'shared/errors', obj: @article %>
       <%= form_with(model: @article, data: { turbo: false }, class: "shadow p-3 mb-3 bg-info rounded") do |form| %>
         <div class="row mb-3">
           <%= form.label :title, class: "col-2 col-form-label text-light" %> 
@@ -15,11 +15,13 @@
             <%= form.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description"  %>
           </div>
         </div>
-        <div class="col-auto">
+        <div class="col-auto text-center">
             <%= form.submit class: "btn btn-outline-light btn-lg text-smokewhite" %>
         </div>
       <% end %>
-          <%= link_to '[ Cancel and Return to articles list ]', articles_path, class: "text-info" %>
+      <div class="col-auto text-center"> 
+        <%= link_to '[ Cancel and Return to articles list ]', articles_path, class: "text-info",  id: 'back_lnk' %>
+      </div>  
     </div>
   </div>
 </div>
