Add edit and update actions

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="col-auto text-center">
-            <%= form.submit "Sign Up", class: "btn btn-outline-light btn-lg text-smokewhite" %>
+            <%= form.submit(@user.new_record? ? "Sign Up" : "Update account", class: "btn btn-outline-light btn-lg text-smokewhite") %>
         </div>
       <% end %>
       <div class="col-auto text-center"> 
