Add index of Users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,11 @@
   color: blue !important;
 }
 
+#author:hover {
+  color: cadetblue !important;
+  font-weight: bold
+}
+
 #logo {
   float: left;
   font-size: 1.7em;
