--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,6 +7,7 @@
         <div class="card text-center shadow mb-2 bg-white rounded">
           <div class="card-header fst-italic fw-lighter">
             by <%= @article.user.username %>
+            <%= link_to gravatar_for(@article.user, size: 70 ), user_path(@article.user) %>
           </div>
           <div class="card-body">
             <div class="card-text text-start "><%= simple_format(@article.description) %></div>
