--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Future Use</a>
+          <%= link_to 'Log in', login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Logout', logout_path, data: { "turbo-method": :delete }, class: "nav-link" %>
         </li>
       </ul>
       <form class="d-flex" role="search">
