--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,9 @@
             Articles
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Create a new article", new_article_path, class: "dropdown-item" %></li>
+            <% end %>
             <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
@@ -22,8 +24,14 @@
           </ul>
         </li>
         <% if logged_in? %>
-          <li class="nav-item">
-            <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Profile [<%= current_user.username %>]
+            </a>
+            <ul class="dropdown-menu">
+                <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></li>
+                <li><%= link_to "Edit your profle", edit_user_path(current_user), class: "dropdown-item" %></li>
+            </ul>
           </li>
           <li class="nav-item">
             <%= link_to 'Logout', logout_path, data: { "turbo-method": :delete }, class: "nav-link" %>
