--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,7 @@
             <ul class="dropdown-menu">
                 <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></li>
                 <li><%= link_to "Edit your profle", edit_user_path(current_user), class: "dropdown-item" %></li>
+                <li><%= link_to "Delete profile", user_path(current_user), data: {"turbo-method": :delete,"turbo-confirm": "Are you sure?"}, class: "dropdown-item text-danger" %></li>
             </ul>
           </li>
           <li class="nav-item">
