--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,12 +26,12 @@
         <% if logged_in? %>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Profile [<%= current_user.username %>]
+              <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username.capitalize %>]
             </a>
             <ul class="dropdown-menu">
                 <li><%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></li>
                 <li><%= link_to "Edit your profle", edit_user_path(current_user), class: "dropdown-item" %></li>
-                <li><%= link_to "Delete profile", user_path(current_user), data: {"turbo-method": :delete,"turbo-confirm": "Are you sure?"}, class: "dropdown-item text-danger" %></li>
+                <li><%= link_to "Delete profile", user_path(current_user), data: {"turbo-method": :delete,        "turbo-confirm": "Are you sure?"}, class: "dropdown-item text-danger" %></li>
             </ul>
           </li>
           <li class="nav-item">
